package youtu;

option cc_generic_services = true;

message FaceItem {
    required uint64 faceid = 1;
    required string photoid = 2;
    required int32  x       = 3;
    required int32  y       = 4;
    required int32  w       = 5;
    required int32  h       = 6;
    optional int32 width    = 7;
    optional int32 hegiht   = 8;
}

message FaceImportRequest {
    required uint32 uin     = 1;
    repeated FaceItem items = 2;
}

message FaceImportResponse {
    repeated uint64 faceid = 1;
}

service FaceImportServer {
    rpc Import(FaceImportRequest) returns (FaceImportResponse);
}
